--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,16 +11,20 @@
         android:theme="@style/AppTheme">
         <activity android:name=".VetLoginOrSignUp"/>
         <activity android:name=".PetLogInOrSignUp" />
-        <activity android:name=".MainActivity"/>
-        <activity android:name=".PetSignUp" />
-        <activity android:name=".OwnerLogin" />
-        <activity android:name=".VetSignUp"  />
-        <activity android:name=".VetLogIn" />
-
+        <activity android:name=".MainActivity">
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+
+
             </intent-filter>
+        </activity>
+        <activity android:name=".PetSignUp" />
+        <activity android:name=".OwnerLogin" />
+        <activity android:name=".VetSignUp"  />
+        <activity android:name=".VetLogIn"  />
+
     </application>
 
 
